--- a/checkout.html
+++ b/checkout.html
@@ -363,8 +363,10 @@
 							<div class="input-checkbox">
 							</div>
 							<!-- Header Modal -->
-							<a class="primary-btn order-submit" id="addPayment" data-toggle="modal">Agregar tarjeta</a>
-							<br>
+							<a class="primary-btn2 order-submit" id="addPayment" data-toggle="modal">Agregar tarjeta</a>
+
+							
+							<br> <br> 
 							<a class="primary-btn order-submit" id="changePayment" data-toggle="modal">Pago contra
 								entrega</a>
 						</div>
