--- a/Carrito.html
+++ b/Carrito.html
@@ -243,6 +243,8 @@
 					<div class="section-title">
 						<h3 class="title">Tus productos agregados</h3>
 
+						<br><br>
+						<a  class="primary-btn3 order-submit" id="changePayment" data-toggle="modal">Proceder al pago</a>
 
 					</div>
 				</div>
