--- a/Metododepag.html
+++ b/Metododepag.html
@@ -191,7 +191,7 @@
 									</div>
 									<div class="cart-btns">
 										<a href="Wishlist.html">Detalle</a>
-										<a href="checkout.html" href="#">Comprar<i
+										<a href="" href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
