--- a/producto.html
+++ b/producto.html
@@ -210,7 +210,7 @@
 									</div>
 									<div class="cart-btns">
 										<a href="Wishlist.html">Detalle</a>
-										<a href="checkout.html" href="#">A carrito<i
+										<a href="" href="#">A carrito<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
