--- a/checkout.html
+++ b/checkout.html
@@ -30,6 +30,7 @@
 	<link type="text/css" rel="stylesheet" href="css/style.css" />
 	<link type="text/css" rel="stylesheet" href="css/input.css" />
 	<script src="./js/cart.js"></script>
+	<script src="./js/wish.js"></script>
 	<script src="./js/pedido.js"></script>
 	<script src="./js/accountInfo.js"></script>
 	<script src="./js/address.js"></script>
@@ -88,8 +89,8 @@
 				</ul>
 				<ul class="header-links pull-right">
 					<!--<li><a href="productregister.html"><i class="fa fa-dollar"></i>Agregar producto</a></li>
-							<li><a href="deleteproduct.html"><i class="fa fa-dollar"></i>Eliminar/Modificar producto</a></li>
-													<!-- Header Modal -->
+								<li><a href="deleteproduct.html"><i class="fa fa-dollar"></i>Eliminar/Modificar producto</a></li>
+														<!-- Header Modal -->
 					<li><a href="#deseos" class="fa fa-user-o" data-toggle="modal" id="profile"> Mi perfil</a></li>
 					<div class="modal fade" id="deseos">
 						<div class="modal_dialog">
@@ -149,10 +150,11 @@
 						<div class="header-search">
 							<form>
 								<select class="input-select">
-									<option>Producto:</option>
+									<option value="1">Producto: </option>
+
 								</select>
-								<input class="input" placeholder="Buscar">
-								<button class="search-btn">Buscar</button>
+								<input class="input" placeholder="Buscar" id="search_string">
+								<button class="search-btn" id="search-btn">Buscar</button>
 							</form>
 						</div>
 					</div>
@@ -166,57 +168,24 @@
 								<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 									<i class="fa fa-heart-o"></i>
 									<span>Deseos</span>
-									<div class="qty">3</div>
+									<div class="qty" id="qty-wish">0</div>
 								</a>
 								<div class="cart-dropdown">
-									<div class="cart-list">
-										<div class="product-widget">
-											<div class="product-img">
-												<img src="./img/chamarraipn.png" alt="">
-											</div>
-											<div class="product-body">
-												<h3 class="product-name">Poli BOMBER</h3>
-												<h4 class="product-price"><span class="qty">1x</span>$680.00</h4>
-											</div>
-
-										</div>
-
-										<div class="product-widget">
-											<div class="product-img">
-												<img src="./img/gorra.jpg" alt="">
-											</div>
-											<div class="product-body">
-												<h3 class="product-name">GorraB.B</h3>
-												<h4 class="product-price"><span class="qty">1x</span>$580.00</h4>
-											</div>
-											<button class="delete"><i class="fa fa-close"></i></button>
-										</div>
+									<div class="cart-list" id="wish-list">
+										<h5 id="no_products_wish">¡Inicia sesión para agregar productos!</h5>
 									</div>
 
-									<div class="product-widget">
-										<div class="product-img">
-											<img src="./img/unoclasico.jpg" alt="">
-										</div>
-										<div class="product-body">
-											<h3 class="product-name">uno clásico</h3>
-											<h4 class="product-price"><span class="qty">1x</span>$80.00</h4>
-										</div>
-										<button class="delete"><i class="fa fa-close"></i></button>
+									<div class="cart-summary" id="wish-summary">
+										<small id="qty-total-wish">0 Articulos</small>
+										<h5 id="subtotal-wish">SUBTOTAL: $0.00</h5>
 									</div>
-
-									<div class="cart-summary">
-										<small>3 Articulos</small>
-										<h5>SUBTOTAL: $1,340.00</h5>
-									</div>
-									<div class="cart-btns">
-										<a href="Wishlist.html">Detalle</a>
-										<a href="" href="#">A carrito<i
-												class="fa fa-arrow-circle-right"></i></a>
+									<div class="cart-btns" id="wish_buttons">
+										<a id="cart_wish">Ver mis deseos</a>
+										<a href="" href="#">Ver mi carrito<i class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
 							</div>
 							<!-- /Wishlist -->
-
 							<!-- Cart -->
 							<div class="dropdown">
 								<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
@@ -234,7 +203,7 @@
 										<h5 id="subtotal">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="cart_buttons">
-										<a href="Carrito.html">Detalle</a>
+										<a id="cart_detail">Detalle</a>
 										<a href="checkout.html" hrer href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
@@ -242,14 +211,7 @@
 							</div>
 							<!-- /Cart -->
 
-							<!-- Menu Toogle -->
-							<div class="menu-toggle">
-								<a href="#">
-									<i class="fa fa-bars"></i>
-									<span>Menu</span>
-								</a>
-							</div>
-							<!-- /Menu Toogle -->
+
 						</div>
 					</div>
 					<!-- /ACCOUNT -->
@@ -327,7 +289,9 @@
 								placeholder="Teléfono">
 						</div>
 					</div>
-					<a class="primary-btn order-submit" data-toggle="modal" id="addAddress">Agregar</a>
+					<a class="primary-btn2 order-submit" data-toggle="modal" id="addAddress">Agregar</a>
+							<br> <br>
+							<a class="primary-btn order-submit" id="changeShipping" data-toggle="modal">Entrega en ESCOM</a>
 
 					<div class="modal fade" id="agregart">
 						<div class="modal_dialog">
@@ -411,8 +375,8 @@
 							<!-- Header Modal -->
 							<a class="primary-btn2 order-submit" id="addPayment" data-toggle="modal">Agregar tarjeta</a>
 
-							
-							<br> <br> 
+
+							<br> <br>
 							<a class="primary-btn order-submit" id="changePayment" data-toggle="modal">Pago contra
 								entrega</a>
 						</div>
