--- a/search.html
+++ b/search.html
@@ -31,6 +31,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="./js/index.js"></script>
 	<script src="./js/cart.js"></script>
+	<script src="./js/wish.js"></script>
 	<script src="./js/searchbar.js"></script>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -152,7 +153,7 @@
 							<form>
 								<select class="input-select">
 									<option value="1">Producto: </option>
-									
+
 								</select>
 								<input class="input" placeholder="Buscar" id="search_string">
 								<button class="search-btn" id="search-btn">Buscar</button>
@@ -169,57 +170,25 @@
 								<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 									<i class="fa fa-heart-o"></i>
 									<span>Deseos</span>
-									<div class="qty">3</div>
+									<div class="qty" id="qty-wish">0</div>
 								</a>
 								<div class="cart-dropdown">
-									<div class="cart-list">
-										<div class="product-widget">
-											<div class="product-img">
-												<img src="./img/chamarraipn.png" alt="">
-											</div>
-											<div class="product-body">
-												<h3 class="product-name">Poli BOMBER</h3>
-												<h4 class="product-price"><span class="qty">1x</span>$680.00</h4>
-											</div>
-
-										</div>
-
-										<div class="product-widget">
-											<div class="product-img">
-												<img src="./img/gorra.jpg" alt="">
-											</div>
-											<div class="product-body">
-												<h3 class="product-name">GorraB.B</h3>
-												<h4 class="product-price"><span class="qty">1x</span>$580.00</h4>
-											</div>
-											<button class="delete"><i class="fa fa-close"></i></button>
-										</div>
+									<div class="cart-list" id="wish-list">
+										<h5 id="no_products_wish">¡Inicia sesión para agregar productos!</h5>
 									</div>
 
-									<div class="product-widget">
-										<div class="product-img">
-											<img src="./img/unoclasico.jpg" alt="">
-										</div>
-										<div class="product-body">
-											<h3 class="product-name">uno clásico</h3>
-											<h4 class="product-price"><span class="qty">1x</span>$80.00</h4>
-										</div>
-										<button class="delete"><i class="fa fa-close"></i></button>
+									<div class="cart-summary" id="wish-summary">
+										<small id="qty-total-wish">0 Articulos</small>
+										<h5 id="subtotal-wish">SUBTOTAL: $1,340.00</h5>
 									</div>
-
-									<div class="cart-summary">
-										<small>3 Articulos</small>
-										<h5>SUBTOTAL: $1,340.00</h5>
-									</div>
-									<div class="cart-btns">
-										<a href="Wishlist.html">Detalle</a>
-										<a href="" href="#">A carrito<i
+									<div class="cart-btns" id="wish_buttons">
+										<a id="cart_wish">Ver mis deseos</a>
+										<a href="" href="#">Ver mi carrito<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
 							</div>
 							<!-- /Wishlist -->
-
 							<!-- Cart -->
 							<div class="dropdown">
 								<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
@@ -237,7 +206,7 @@
 										<h5 id="subtotal">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="cart_buttons">
-										<a href= "Carrito.html" >Detalle</a>
+										<a id="cart_detail">Detalle</a>
 										<a href="checkout.html" hrer href="#">Comprar<i
 												class="fa fa-arrow-circle-right"></i></a>
 									</div>
@@ -245,14 +214,7 @@
 							</div>
 							<!-- /Cart -->
 
-							<!-- Menu Toogle -->
-							<div class="menu-toggle">
-								<a href="#">
-									<i class="fa fa-bars"></i>
-									<span>Menu</span>
-								</a>
-							</div>
-							<!-- /Menu Toogle -->
+							
 						</div>
 					</div>
 					<!-- /ACCOUNT -->
