--- a/perfil.html
+++ b/perfil.html
@@ -475,7 +475,7 @@
 				</ul>
 				<ul class="lista-datos">
 					<li><i class="icono fa fa-heart-o"></i> Lista de deseos.</li>
-					<li><i class="icono fa fa-close"></i> Cerrar sesión.</li>
+					<li><i class="icono fa fa-close"></i> Eliminar Cuenta</li>
 
 				</ul>
 
