--- a/electronica.html
+++ b/electronica.html
@@ -560,6 +560,8 @@
 								<li><a href="#">Lista de deseos</a></li>
 								<li><a href="#">Rastrear</a></li>
 								<li><a href="#">Ayuda</a></li>
+								<li><a href="devolucion.html">Devolucion</a></li>
+								<li><a href="devolucion.html">Reembolso</a></li>
 							</ul>
 						</div>
 					</div>
