--- a/Metododepag.html
+++ b/Metododepag.html
@@ -642,6 +642,8 @@
 								<li><a href="#">Lista de deseos</a></li>
 								<li><a href="#">Rastrear pedido</a></li>
 								<li><a href="#">Ayuda </a></li>
+								<li><a href="devolucion.html">Devolucion</a></li>
+								<li><a href="devolucion.html">Reembolso</a></li>
 							</ul>
 						</div>
 					</div>
